--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -73,6 +73,12 @@
 #   fg: foreground color
 #   bg: background color
 
+# vfo options:
+#   AorB: 'A' for vfo A and 'B' for vfo B
+#   fg: foreground color
+#   bg: background color
+#   font: the font used for the vfo
+
 - item: defaults
   # Colors
   bg: maroon1
@@ -114,12 +120,29 @@
       - item: group
         label: VFO A
         contains:
-          - { item: vfo, AorB: A, bg: white, fg: black }
+          - { item: vfo, AorB: A, bg: white, fg: black, font: { family: Helvetica, size: 10, weight: normal } }
 
       - item: group
         label: VFO B
         contains:
-          - { item: vfo, AorB: B, bg: white, fg: black }
+          - { item: vfo, AorB: B, bg: white, fg: black, font: { family: Helvetica, size: 10, weight: normal } }
+
+    - item: group
+      label: VFO link
+      columns: 2
+      column: 0
+      contains:
+            - { item: radiobutton, groupid: link, indicator: 0, text: Linked,      cmd: FT0;BI0;#DPM0;, response: BI0;,  abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
+            - { item: radiobutton, groupid: link, indicator: 0, text: Independent, cmd: FT0;BI1;#DPM2;, response: BI1;,  abg: yellow, bg: '#98F5FF' }
+
+    - item: group
+      label: Transceiver mode
+      columns: 2
+      column: 1
+      rowspan: 1
+      contains:
+            - { item: radiobutton, groupid: test ,indicator: 0, text: Test,     cmd: TS1;,   abg: yellow, bg: '#98F5FF', flashrate: 10 }
+            - { item: radiobutton, groupid: test, indicator: 0, text: Transmit, cmd: TS0;,   abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
 
     - item: group
       label: Mode VFO
@@ -141,7 +164,7 @@
 
     - item: group
       columns: 2
-      rowspan: 12
+      rowspan: 06
       contains:
         - item: group
           label:  VFO A
@@ -149,7 +172,6 @@
           rows: 10
           rowspan: 12
           contains:
-
             - { item: radiobutton, groupid: bandA, indicator: 0, text:   6 m,  cmd: BN10;,  abg: yellow, bg: '#CAFF70', selectcolor: '#00C957' }
             - { item: radiobutton, groupid: bandA, indicator: 0, text:  10 m,  cmd: BN09;,  abg: yellow, bg: '#CAFF70', selectcolor: '#00C957' }
             - { item: radiobutton, groupid: bandA, indicator: 0, text:  12 m,  cmd: BN08;,  abg: yellow, bg: '#CAFF70', selectcolor: '#00C957' }
@@ -182,21 +204,30 @@
             - { item: radiobutton, groupid: bandB, indicator: 0, text: 160 m, cmd: BN$00;, abg: yellow, bg: '#98F5FF' }
 
     - item: group
-      label: VFO link
       columns: 2
-      column: 0
+      column: 1
+      rowspan: 12
+      row: 6
       contains:
-            - { item: radiobutton, groupid: link, indicator: 0, text: Linked,      cmd: FT0;BI0;#DPM0;, response: BI0;,  abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
-            - { item: radiobutton, groupid: link, indicator: 0, text: Independent, cmd: FT0;BI1;#DPM2;, response: BI1;,  abg: yellow, bg: '#98F5FF' }
+        - item: group
+          label: Pre
+          columns: 1
+          rows: 4
+          contains:
+            - { item: radiobutton, groupid: pre, indicator: 0, text:    None,      cmd: PA00;PA$00;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: pre, indicator: 0, text:    Preamp 1,  cmd: PA11;PA$11;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: pre, indicator: 0, text:    Preamp 2,  cmd: PA21;PA$21;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: pre, indicator: 0, text:    Preamp 3,  cmd: PA31;PA$31;, abg: yellow, bg: '#98F5FF' }
 
-    - item: group
-      label: Transceiver mode
-      columns: 2
-      column: 0
-      contains:
-            - { item: radiobutton, groupid: test ,indicator: 0, text: Test mode on,  cmd: TS1;,   abg: yellow, bg: '#98F5FF', flashrate: 10 }
-            - { item: radiobutton, groupid: test, indicator: 0, text: Test mode off, cmd: TS0;,   abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
-
+        - item: group
+          label: Att
+          columns: 1
+          rows: 4
+          contains:
+            - { item: radiobutton, groupid: att, indicator: 0, text:     0 dB,  cmd: RA000;RA$000;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: att, indicator: 0, text:    -3 dB,  cmd: RA031;RA$031;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: att, indicator: 0, text:    -6 dB,  cmd: RA061;RA$061;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: att, indicator: 0, text:   -12 dB,  cmd: RA121;RA$121;, abg: yellow, bg: '#98F5FF' }
 
     - item: group
       label: Bandwidth
@@ -213,6 +244,17 @@
             - { item: radiobutton, groupid: bandwidth, indicator: 0, text:   4.0 kHz, cmd: BW0400;, abg: yellow, bg: '#98F5FF' }
 
     - item: group
+      label: Power
+      columns: 5
+      column: 0
+      contains:
+            - { item: radiobutton, groupid: power, indicator: 0, text:   5 W, cmd: PC050L;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
+            - { item: radiobutton, groupid: power, indicator: 0, text:  25 W, cmd: PC025H;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: power, indicator: 0, text:  50 W, cmd: PC050H;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: power, indicator: 0, text:  75 W, cmd: PC075H;, abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: power, indicator: 0, text: 100 W, cmd: PC100H;, abg: yellow, bg: '#98F5FF' }
+
+    - item: group
       label: Power (Watts)
       column: 0
       contains:
@@ -225,37 +267,27 @@
         response: "float(value[2:5])/10 if value[5] == 'L' else float(value[2:5])/10000 if value[5] == 'X' else float(value[2:5])"
 
     - item: group
-      label: Power
-      columns: 5
-      column: 0
-      contains:
-            - { item: radiobutton, groupid: power, indicator: 0, text:   5 W, cmd: PC050L;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
-            - { item: radiobutton, groupid: power, indicator: 0, text:  25 W, cmd: PC025H;, abg: yellow, bg: '#98F5FF' }
-            - { item: radiobutton, groupid: power, indicator: 0, text:  50 W, cmd: PC050H;, abg: yellow, bg: '#98F5FF' }
-            - { item: radiobutton, groupid: power, indicator: 0, text:  75 W, cmd: PC075H;, abg: yellow, bg: '#98F5FF' }
-            - { item: radiobutton, groupid: power, indicator: 0, text: 100 W, cmd: PC100H;, abg: yellow, bg: '#98F5FF' }
-
-    - item: group
-      label: ATU control
+      label: ATU mode
       columns: 3
       column: 0
       contains:
-            - { item: radiobutton, groupid: atu, indicator: 0, text: ATU bypass,    cmd: AT1;,   abg: yellow, bg: '#98F5FF' }
-            - { item: radiobutton, groupid: atu, indicator: 0, text: ATU auto,      cmd: AT2;,   abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
-            - { item: button,      groupid: atu,               text: ATU tune,      cmd: SW40;, abg: red,    bg: yellow }
+            - { item: radiobutton, groupid: atu, indicator: 0, text: bypass, cmd: AT1;,  abg: yellow, bg: '#98F5FF' }
+            - { item: radiobutton, groupid: atu, indicator: 0, text: auto,   cmd: AT2;,  abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
+            - { item: button,      groupid: atu,               text: tune,   cmd: SW40;, abg: red,    bg: yellow }
 
     - item: group
       label: Volume
-      columns: 7
+      columns: 4
       column: 0
       contains:
             - { item: radiobutton, groupid: vol, indicator: 0, text:  Mute, cmd: AG000;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
             - { item: radiobutton, groupid: vol, indicator: 0, text:   10%, cmd: AG006;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
+            - { item: radiobutton, groupid: vol, indicator: 0, text:   15%, cmd: AG009;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
             - { item: radiobutton, groupid: vol, indicator: 0, text:   20%, cmd: AG012;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
-            - { item: radiobutton, groupid: vol, indicator: 0, text:   30%, cmd: AG018;, abg: yellow, bg: '#98F5FF', selectcolor: '#00C957' }
-            - { item: radiobutton, groupid: vol, indicator: 0, text:   40%, cmd: AG024;, abg: yellow, bg: '#98F5FF', selectcolor: 'yellow' }
+            - { item: radiobutton, groupid: vol, indicator: 0, text:   25%, cmd: AG015;, abg: yellow, bg: '#98F5FF', selectcolor: 'yellow' }
+            - { item: radiobutton, groupid: vol, indicator: 0, text:   30%, cmd: AG018;, abg: yellow, bg: '#98F5FF', selectcolor: 'red1' }
+            - { item: radiobutton, groupid: vol, indicator: 0, text:   40%, cmd: AG024;, abg: yellow, bg: '#98F5FF', selectcolor: 'red1' }
             - { item: radiobutton, groupid: vol, indicator: 0, text:   50%, cmd: AG030;, abg: yellow, bg: '#98F5FF', selectcolor: 'red1' }
-            - { item: radiobutton, groupid: vol, indicator: 0, text:   60%, cmd: AG036;, abg: yellow, bg: '#98F5FF', selectcolor: 'red1' }
 
     - item: group
       label: Sidetone
