Change vfo step selector to a combobox
The vfo selector defaults to combobox, a spinbox can be selected
by adding 'step_spinbox: true' to the vfo yaml entry.

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -78,6 +78,7 @@
 #   fg: foreground color
 #   bg: background color
 #   font: the font used for the vfo
+#   step_spinbox: When set to 'true', the vfo step will be selected by a spinbox.
 
 - item: defaults
   # Colors
